---
source: src/tests/github_secret_scanning.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Your Trusted Publishing token has been revoked
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


GitHub has notified us that one of your crates.io Trusted Publishing tokens has been exposed publicly. We have revoked this token as a precaution.

This token was only authorized to publish the "foo" crate.

Please review your account at https://crates.io and your GitHub repository settings to confirm that no unexpected changes have been made to your crates or trusted publishing configurations.

Source type: some_source

URL where the token was found: some_url

Trusted Publishing tokens are temporary and used for automated publishing from GitHub Actions. If this exposure was unexpected, please review your repository's workflow files and secrets.

--
The crates.io Team
